Change meeting titles in notifications

--- a/functions/_i18n/locales/en.json
+++ b/functions/_i18n/locales/en.json
@@ -14,11 +14,11 @@
       }
     },
     "sendMeetingInvitedNotification": {
-      "title": "Meeting {{role}} - {{title}}",
+      "title": "Meeting {{title}} - {{role}}",
       "content": "Invitation by {{sender}}."
     },
     "sendMeetingStartedNotification": {
-      "title": "Meeting {{role}} - {{title}}",
+      "title": "Meeting {{title}} - {{role}}",
       "content": "{{sender}} started the meeting!"
     }
   }
