--- a/functions/_i18n/locales/fr.json
+++ b/functions/_i18n/locales/fr.json
@@ -15,7 +15,9 @@
     },
     "sendMeetingInvitedNotification": {
       "title": "Réunion {{title}} - {{role}}",
-      "content": "Invitation par {{sender}}."
+      "content": "Invitation par {{sender}}.",
+      "recurringMeetingtitle": "Réunion récurrente {{role}} - {{title}}",
+      "recurringMeetingcontent": "Invitation par {{sender}} à une réunion récurrente."
     },
     "sendMeetingStartedNotification": {
       "title": "Réunion {{title}} - {{role}}",
