--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -653,7 +653,7 @@
       "pricePerSeat": "Price per seat:",
       "nbSeat_one": "Number of seat:",
       "nbSeat_other": "Number of seats:",
-      "total": "Total per month",
+      "total": "Total",
       "month": "month",
       "promotionPlaceholder": "Promotion code",
       "dueNow": "Due now",
