--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -653,7 +653,9 @@
       "pricePerSeat": "Price per seat:",
       "nbSeat_one": "Number of seat:",
       "nbSeat_other": "Number of seats:",
+      "subTotal": "Sub-total",
       "total": "Total",
+      "totalWithVAT": "Total (VAT {{percentage}}% / {{count}}€)",
       "month": "month",
       "promotionPlaceholder": "Promotion code",
       "dueNow": "Due now",
