--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -650,7 +650,9 @@
       "pricePerSeat": "Prix par place :",
       "nbSeat_one": "Nombre de place :",
       "nbSeat_other": "Nombre de places :",
+      "subTotal": "Sous-total",
       "total": "Total",
+      "totalWithVAT": "Total (TVA {{percentage}}% / {{count}}€)",
       "month": "mois",
       "promotionPlaceholder": "Coupon de réduction",
       "invalidPromotionCode": "Ce code promo n'est pas valide",
