--- a/functions/_i18n/locales/fr.json
+++ b/functions/_i18n/locales/fr.json
@@ -15,9 +15,7 @@
     },
     "sendMeetingInvitedNotification": {
       "title": "Réunion {{title}} - {{role}}",
-      "content": "Invitation par {{sender}}.",
-      "recurringMeetingtitle": "Réunion récurrente {{role}}",
-      "recurringMeetingcontent": "Invitation par {{sender}} à une réunion récurrente."
+      "content": "Invitation par {{sender}}."
     },
     "sendMeetingStartedNotification": {
       "title": "Réunion {{title}} - {{role}}",
