:sparkles: add task assigned notification

--- a/functions/_i18n/locales/en.json
+++ b/functions/_i18n/locales/en.json
@@ -20,6 +20,10 @@
     "sendMeetingStartedNotification": {
       "title": "Meeting {{title}} - {{role}}",
       "content": "{{sender}} started the meeting!"
+    },
+    "sendTaskAssignedNotification": {
+      "title": "Task assigned to you for {{role}}",
+      "content": "Task {{title}} was assigned to you"
     }
   }
 }
