--- a/functions/_i18n/locales/fr.json
+++ b/functions/_i18n/locales/fr.json
@@ -20,6 +20,10 @@
     "sendMeetingStartedNotification": {
       "title": "Réunion {{title}} - {{role}}",
       "content": "{{sender}} a démarré la réunion !"
+    },
+    "sendTaskAssignedNotification": {
+      "title": "Une tâche vous a été assigné pour {{role}}",
+      "content": "La tâche {{title}} vous a été assigné"
     }
   }
 }
