Improve members search layout

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -419,7 +419,7 @@
   "MembersPage": {
     "heading": "Members",
     "searchPlaceholder": "Search...",
-    "invite": "Invite",
+    "invite": "Invite members to participate",
     "tags": {
       "readonly": "Read only",
       "member": "Member",
