--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -418,7 +418,7 @@
   "MembersPage": {
     "heading": "Membres",
     "searchPlaceholder": "Rechercher...",
-    "invite": "Inviter",
+    "invite": "Inviter des membres à participer",
     "tags": {
       "readonly": "Lecture seule",
       "member": "Membre",
