Feat/task assigned notification (#87)
* :sparkles: add task assigned notification

* :recycle: only use event for task assigned notification

* :recycle: add clean generated files after rebase

* :fire: remove useless fragment and type

* :recycle: refacto guardOrg

* :recycle: refacto a bit meeting started

--- a/functions/_i18n/locales/fr.json
+++ b/functions/_i18n/locales/fr.json
@@ -20,6 +20,10 @@
     "sendMeetingStartedNotification": {
       "title": "Réunion {{title}} - {{role}}",
       "content": "{{sender}} a démarré la réunion !"
+    },
+    "sendTaskAssignedNotification": {
+      "title": "Une tâche vous a été assignée pour {{role}}",
+      "content": "La tâche {{title}} vous a été assignée"
     }
   }
 }
