Update lexical and fix ObjectDiff with editor state values

--- a/src/components/molecules/editor/lib/README
+++ b/src/components/molecules/editor/lib/README
@@ -6,13 +6,13 @@ To do that, it is recommanded to clone the repo, pull the last commits
 and display a diff between last synchronized commit with HEAD:
 
 ```
-git diff fad90c6132c6c1fcbb55d31fa5bd3b54868086f8 HEAD -- packages/lexical-playground/ ':!packages/lexical-playground/__tests__/'
+git diff c1bdf82a677a226960c9ffd94dec68c965003831 HEAD -- packages/lexical-playground/ ':!packages/lexical-playground/__tests__/'
 ```
 
 Last applied commit:
 
-commit fad90c6132c6c1fcbb55d31fa5bd3b54868086f8 (HEAD -> main, origin/main, origin/HEAD)
-Author: Dominic Gannaway <trueadm@users.noreply.github.com>
-Date: Fri Feb 10 14:12:25 2023 +0000
+commit c1bdf82a677a226960c9ffd94dec68c965003831 (HEAD -> main, origin/main, origin/HEAD)
+Author: Dragoș Străinu <str.dr4605@gmail.com>
+Date: Thu Mar 30 17:53:29 2023 +0300
 
-    Add KEY_DOWN_COMMAND (#3878)
+    Fix TypeaheadMenuPlugin scrollIntoView to not rely on external class (#4238)
