Improve threads with "mark as unread" feature and better scroll management

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -907,6 +907,7 @@
     "hide": "Masquer",
     "seeMore": "Voir plus",
     "seeLess": "Voir moins",
+    "markUnread": "Marquer comme non lu",
     "filters": "Filtres",
     "archives": "Archives",
     "archived": "Archivé",
