--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -906,6 +906,7 @@
     "hide": "Hide",
     "seeMore": "See more",
     "seeLess": "See less",
+    "markUnread": "Mark as unread",
     "filters": "Filters",
     "archives": "Archives",
     "archived": "Archived",
