--- a/functions/_i18n/locales/fr.json
+++ b/functions/_i18n/locales/fr.json
@@ -23,20 +23,18 @@
       "content": "{{sender}} a démarré la réunion !"
     },
     "sendTaskAssignedNotification": {
-      "title": "Une tâche vous a été assignée ({{role}})",
+      "title": "Une tâche vous a été assignée - {{role}}",
       "content": "{{title}}"
     },
     "sendThreadNotification": {
-      "title": "Nouveau sujet pour vous dans {{role}}",
-      "content": "Le sujet suivant '{{title}}' vous concerne."
+      "title": "Nouveau sujet pour vous - {{role}}",
+      "content": "{{title}}"
     },
     "sendThreadActivityNotification": {
-      "title": "Nouvelle activité sur le sujet suivant : {{title}}",
-      "content": "Nouveau message sur le sujet suivant : {{title}}.",
-      "titleSingular": "Nouvelle activité sur le sujet suivant : {{title}}",
-      "titlePlural": "Nouvelles activités sur le sujet suivant : {{title}}.",
-      "contentSingular": "nouveau message sur le sujet suivant : {{title}}",
-      "contentPlural": "nouveaux messages sur le sujet suivant : {{title}}."
+      "title": "Nouvelle activité sur le sujet '{{title}}'",
+      "content": "Nouveau message sur le sujet '{{title}}'.",
+      "digestContentSingular": "nouveau message sur le sujet '{{title}}'",
+      "digestContentPlural": "nouveaux messages sur le sujet '{{title}}'."
     }
   }
 }
