Add SEPA to Stripe payment methods

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -653,9 +653,8 @@
       "confirm": "Confirm",
       "prev": "Back",
       "subscription": "Subscription:",
-      "pricePerSeat": "Price per seat:",
-      "nbSeat_one": "Number of seat:",
-      "nbSeat_other": "Number of seats:",
+      "pricePerSeat": "Price per user:",
+      "nbSeat": "Number of users:",
       "subTotal": "Sub-total",
       "total": "Total",
       "totalWithVAT": "Total (VAT {{percentage}}% / {{count}}€)",
