--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -650,9 +650,8 @@
       "confirm": "Confirmer",
       "prev": "Retour",
       "subscription": "Abonnement :",
-      "pricePerSeat": "Prix par place :",
-      "nbSeat_one": "Nombre de place :",
-      "nbSeat_other": "Nombre de places :",
+      "pricePerSeat": "Prix par utilisateur :",
+      "nbSeat": "Nombre d'utilisateurs :",
       "subTotal": "Sous-total",
       "total": "Total",
       "totalWithVAT": "Total (TVA {{percentage}}% / {{count}}€)",
