:recycle: refacto for reviews

--- a/functions/_i18n/locales/fr.json
+++ b/functions/_i18n/locales/fr.json
@@ -6,7 +6,7 @@
     "common": {
       "action": {
         "openMeeting": "Ouvrir la réunion",
-        "openTask": "Open la tâche",
+        "openTask": "Ouvrir la tâche",
         "openThread": "Ouvrir le sujet"
       },
       "email": {
